--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-plugin-component": "^1.1.0",
+    "element-ui": "^2.2.0",
+    "jquery": "^3.3.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
