--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "babel-plugin-component": "^1.1.0",
     "element-ui": "^2.2.0",
     "jquery": "^3.3.1",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
